[gd_scene load_steps=13 format=2]

[ext_resource path="res://menus/main menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://menus/main menu/bg.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/EagleLake-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menus/main menu/MainMenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/main menu/Circle.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/main menu/character_display/Char2.tscn" type="PackedScene" id=6]
[ext_resource path="res://menus/main menu/character_display/Char1.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]

size = 200
use_mipmaps = false
use_filter = true
extra_spacing_bottom = -50
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 70
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]

size = 30
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1081.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect", "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 1920.0
margin_bottom = 1079.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="TitleContainer" type="CenterContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 397.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="TitleContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 641.0
margin_right = 1279.0
margin_bottom = 397.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" type="Label" parent="TitleContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 638.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.303768, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 0, 0.501961 )
custom_constants/shadow_as_outline = 1
text = "AIUS"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Subtitle" type="Label" parent="TitleContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 282.0
margin_right = 638.0
margin_bottom = 397.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.115845, 0, 0.285156, 1 )
custom_colors/font_color_shadow = Color( 0.137255, 0.678431, 0.301961, 1 )
custom_constants/shadow_as_outline = 1
text = "Battle for Magic"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Buttons" type="VBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 450.0
margin_right = 600.0
margin_bottom = 922.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="Play" parent="Buttons" index="0" instance=ExtResource( 4 )]

margin_bottom = 115.0
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_right = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
_sections_unfolded = [ "Focus", "Mouse", "Rect", "custom_styles" ]

[node name="NormalLabel" parent="Buttons/Play" index="0"]

rect_clip_content = false
text = "Play"

[node name="FocusLabel" parent="Buttons/Play" index="1"]

rect_clip_content = false
text = "Play"

[node name="Settings" parent="Buttons" index="1" instance=ExtResource( 4 )]

editor/display_folded = true
margin_top = 119.0
margin_bottom = 234.0
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
_sections_unfolded = [ "Focus", "Mouse", "custom_styles" ]

[node name="NormalLabel" parent="Buttons/Settings" index="0"]

rect_clip_content = false
text = "Settings"

[node name="FocusLabel" parent="Buttons/Settings" index="1"]

rect_clip_content = false
text = "Settings"

[node name="Credits" parent="Buttons" index="2" instance=ExtResource( 4 )]

editor/display_folded = true
margin_top = 238.0
margin_bottom = 353.0
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
_sections_unfolded = [ "Focus", "Mouse", "custom_styles" ]

[node name="NormalLabel" parent="Buttons/Credits" index="0"]

rect_clip_content = false
text = "Credits"

[node name="FocusLabel" parent="Buttons/Credits" index="1"]

rect_clip_content = false
text = "Credits"

[node name="Quit" parent="Buttons" index="3" instance=ExtResource( 4 )]

editor/display_folded = true
margin_top = 357.0
margin_bottom = 472.0
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Play")
focus_next = NodePath(".")
focus_previous = NodePath(".")
_sections_unfolded = [ "Focus", "Mouse", "Rect", "custom_styles" ]

[node name="NormalLabel" parent="Buttons/Quit" index="0"]

rect_clip_content = false
text = "Quit"

[node name="FocusLabel" parent="Buttons/Quit" index="1"]

rect_clip_content = false
text = "Quit"

[node name="Fade" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "fade_in"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
blend_times = [  ]

[node name="Circle" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( 960, 700 )

[node name="Characters" type="HBoxContainer" parent="." index="5"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1204.0
margin_top = -630.0
margin_right = -240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Char2" parent="Characters" index="0" instance=ExtResource( 6 )]

margin_right = 480.0
margin_bottom = 630.0
_sections_unfolded = [ "Material" ]

[node name="Char1" parent="Characters" index="1" instance=ExtResource( 7 )]

margin_left = 484.0
margin_right = 964.0
_sections_unfolded = [ "Material" ]

[node name="Version" type="Label" parent="." index="6"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -60.0
margin_right = -20.0
grow_horizontal = 0
rect_min_size = Vector2( 150, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.588235, 0.392157, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 3
text = "v 0.0.0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]


[editable path="Buttons/Play"]
[editable path="Buttons/Settings"]
[editable path="Buttons/Credits"]
[editable path="Buttons/Quit"]
